crates/analyzer/tests/snapshots/errors__revert_sto_error_no_copy.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: `revert` value must be copied to memory
  ┌─ compile_errors/revert_sto_error_no_copy.fe:7:16
  │
7 │         revert self.my_error
  │                ^^^^^^^^^^^^^ this value is in storage
  │
  = Hint: values located in storage can be copied to memory using the `to_mem` function.
  = Example: `self.my_error.to_mem()`


